Moved library and web api/example apart