@@ -11,8 +11,8 @@
 	<groupId>com.github.mapkiwiz</groupId>
 	<artifactId>jgrapht-routing</artifactId>
 	<version>0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
-	<name>Java Routing Service base on JGraphT</name>
+	<packaging>pom</packaging>
+	<name>Java Routing Service based on JGraphT</name>
 
 	<developers>
 		<developer>
@@ -39,98 +39,27 @@
 	<properties>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	    <spring.version>4.2.0.RELEASE</spring.version>
-	    <spring.security.version>3.2.6.RELEASE</spring.security.version>
-	    <spring.security.oauth.version>2.0.7.RELEASE</spring.security.oauth.version>
-	    <angular.version>1.3.15</angular.version>
-	    <java.version>1.6</java.version>
-	    <m2eclipse.wtp.contextRoot>/routing</m2eclipse.wtp.contextRoot>
 	</properties>
 
-	<profiles>
-	    <profile>
-	    	<id>debug</id>
-	    	<build>
-	    		<plugins>
-	    			<plugin>
-				        <groupId>org.apache.tomcat.maven</groupId>
-				        <artifactId>tomcat7-maven-plugin</artifactId>
-				        <configuration>
-				          <path>/routing</path>
-						  <fork>false</fork>
-				          <systemProperties>
-				            <JAVA_OPTS>-Xmx1024m -Xms256m -XX:MaxPermSize=256m -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS>
-				          </systemProperties>
-				        </configuration>
-				     </plugin>
-	    		</plugins>
-	    	</build>
-	    </profile>
-		<profile>
-			<id>integration</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.7.1</version>
-						<executions>
-							<execution>
-								<id>surefire-it</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>test</goal>
-								</goals>
-								<configuration>
-									<skip>${skipTests}</skip>
-									<testFailureIgnore>false</testFailureIgnore>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.tomcat.maven</groupId>
-						<artifactId>tomcat7-maven-plugin</artifactId>
-						<version>2.2</version>
-						<executions>
-							<execution>
-								<id>start-tomcat</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<configuration>
-									<path>/routing</path>
-									<fork>true</fork>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
+  	<modules>
+		<module>jgrapht-routing-core</module>
+		<module>jgrapht-routing-web-api</module>
+	</modules>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<excludedGroups>com.github.mapkiwiz.test.PostgisTest,com.github.mapkiwiz.test.PerformanceTest</excludedGroups>
-				</configuration>
-			</plugin>
-			<plugin>
-					<groupId>org.apache.tomcat.maven</groupId>
-					<artifactId>tomcat7-maven-plugin</artifactId>
-					<configuration>
-						<path>/routing</path>
-						<protocol>org.apache.coyote.http11.Http11NioProtocol</protocol>
-						<systemProperties>
-							<JAVA_OPTS>-server -Xmx512m -Xms512m -XX:+AggressiveOpts</JAVA_OPTS>
-						</systemProperties>
-					</configuration>
-			</plugin>
-		</plugins>
+                <plugins>
+                        <plugin>
+                                        <groupId>org.apache.tomcat.maven</groupId>
+                                        <artifactId>tomcat7-maven-plugin</artifactId>
+                                        <configuration>
+                                                <path>/routing</path>
+                                                <protocol>org.apache.coyote.http11.Http11NioProtocol</protocol>
+                                                <systemProperties>
+                                                        <JAVA_OPTS>-server -Xmx512m -Xms512m -XX:+AggressiveOpts</JAVA_OPTS>
+                                                </systemProperties>
+                                        </configuration>
+                        </plugin>
+                </plugins>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -159,23 +88,6 @@
 		</pluginManagement>
 	</build>
 
-	<repositories>
-		<repository>
-			<id>spring-milestone</id>
-			<name>Spring Framework Milestone Repository</name>
-			<url>http://maven.springframework.org/milestone</url>
-		</repository>
-		<repository>
-			<id>spring-release</id>
-			<name>Spring Framework Release Repository</name>
-			<url>http://maven.springframework.org/release</url>
-		</repository>
-		<repository>
-			<id>java.net</id>
-			<url>http://download.java.net/maven/2</url>
-		</repository>
-	</repositories>
-
 	<dependencies>
 	
 		<dependency>
@@ -196,109 +108,17 @@
 			<version>1.7.2</version>
 		</dependency> -->
 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-tx</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-
 		<!-- <dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-taglibs</artifactId>
-			<version>${spring.security.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
-			<version>${spring.security.oauth.version}</version>
-		</dependency> -->
-
-		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.3.1</version>
-		</dependency>
+		</dependency> -->
 		
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.2.4</version>
 		</dependency>
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
-		</dependency>
-
-		<!-- <dependency>
-			<groupId>org.webjars.bower</groupId>
-			<artifactId>jquery</artifactId>
-			<version>1.11.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.webjars.bower</groupId>
-			<artifactId>bootstrap</artifactId>
-			<version>3.1.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.webjars.bower</groupId>
-			<artifactId>angular</artifactId>
-			<version>${angular.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.webjars.bower</groupId>
-			<artifactId>angular-sanitize</artifactId>
-			<version>${angular.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.webjars.bower</groupId>
-			<artifactId>angular-bootstrap</artifactId>
-			<version>0.13.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.webjars.bower</groupId>
-			<artifactId>jwt-client</artifactId>
-			<version>0.1.0</version>
-		</dependency> -->
 
 		<dependency>
 			<groupId>junit</groupId>
@@ -313,44 +133,6 @@
 			<version>4.3.3</version>
 			<scope>test</scope>
 		</dependency> -->
-
-		<dependency>
-			<groupId>org.jgrapht</groupId>
-			<artifactId>jgrapht-core</artifactId>
-			<version>0.9.1</version>
-		</dependency>
-
-		<dependency>
-		    <groupId>org.apache.commons</groupId>
-			<artifactId>commons-csv</artifactId>
-			<version>1.1</version>
-		</dependency>
-
-		<!-- <dependency>
-			<groupId>com.github.davidmoten</groupId>
-			<artifactId>rtree</artifactId>
-    		<version>0.6.4</version>
-		</dependency> -->
-
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.3-1103-jdbc4</version>
-			<scope>runtime</scope>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.3.3</version>
-			<scope>test</scope>
-		</dependency>
-		
-		<dependency>
-		    <groupId>com.timgroup</groupId>
-		    <artifactId>java-statsd-client</artifactId>
-		    <version>3.0.1</version>
-		</dependency>
 
 	</dependencies>
 
